Fixed the issue with Dropbox Upload which was happening because the token expires, added the refreh token logic

--- a/.gitignore
+++ b/.gitignore
@@ -162,8 +162,7 @@ cython_debug/
 #.idea/
 
 # custom ignore directory and files
-archive
-/reddit
+archive/
+reddit/
 *.md
-/reddit_acvhive*
-/dropbox_operations.py
+reddit_acvhive*
