--- a/settings.ini
+++ b/settings.ini
@@ -2,7 +2,7 @@
 save_directory = reddit/
 dropbox_directory = /reddit
 save_type = ALL
-check_type = DIR
+check_type = LOG
 
 [Configuration]
 client_id = None
