Added the git unsaved functionality and the ability to process the files from the requested log from the reddit

--- a/settings.ini
+++ b/settings.ini
@@ -3,6 +3,9 @@ save_directory = reddit/
 dropbox_directory = /reddit
 save_type = ALL
 check_type = LOG
+unsave_after_download = false
+process_gdpr = false
+process_api = true
 
 [Configuration]
 client_id = None
