feat: Add option to ignore TLS errors for third-party content
- Added ignore_tls_errors setting to settings.ini (defaults to false)
- Implemented SSL bypass capability in download_image function
- Added configuration loading in env_config.py
- Pass TLS setting through all save functions in file_operations.py
- Updated GDPR processor to support TLS bypass
- Added documentation in README.md with security warnings

This allows archival of content from sites with expired certificates
when explicitly enabled by the user. Addresses issue #2.

--- a/settings.ini
+++ b/settings.ini
@@ -6,6 +6,7 @@ check_type = LOG
 unsave_after_download = false
 process_gdpr = false
 process_api = true
+ignore_tls_errors = false
 
 [Configuration]
 client_id = None
