--- a/.gitignore
+++ b/.gitignore
@@ -167,9 +167,14 @@ reddit/
 reddit_archive/
 *.md
 *.json
+*.db
 reddit_acvhive*
 file_log.json
 CLAUDE.md
 node_modules/
 .claude/
 BRANCH_DIFFERENCES.md
+archive/
+test_*.py
+.ruff_cache/
+test_downloads/
