Added the Content Recovery System using Wayback Machine, PullPush.io, Reddit previews, Reveddit.com

--- a/settings.ini
+++ b/settings.ini
@@ -54,7 +54,7 @@ recover_deleted = true
 use_wayback_machine = true
 use_pushshift_api = true
 use_reddit_previews = true
-use_reveddit_api = false
+use_reveddit_api = true
 # Timeout for recovery attempts in seconds
 timeout_seconds = 10
 cache_duration_hours = 24
