Added fixes based on the two comments on the pr

--- a/.gitignore
+++ b/.gitignore
@@ -178,7 +178,7 @@ archive/
 test_*.py
 .ruff_cache/
 test_downloads/
-tests/
 docs/
 cleanup_corrupt_images.py
 fix_double_extensions.py
+reddit_local/
