Updated the issues with respect to the PR comments

--- a/settings.ini
+++ b/settings.ini
@@ -58,3 +58,24 @@ use_reveddit_api = true
 # Timeout for recovery attempts in seconds
 timeout_seconds = 10
 cache_duration_hours = 24
+# Cache size management
+max_cache_entries = 10000
+max_cache_size_mb = 100
+# Cleanup intervals
+cleanup_interval_minutes = 60
+enable_background_cleanup = true
+
+# Retry Queue Configuration
+[Retry]
+# Maximum retry attempts for failed downloads
+max_retries = 5
+# Base retry delay in seconds for different priorities (high=1, medium=2, low=3)
+base_retry_delay_high = 5
+base_retry_delay_medium = 10
+base_retry_delay_low = 15
+# Exponential backoff base delay in seconds
+exponential_base_delay = 60
+# Maximum retry delay in seconds (24 hours)
+max_retry_delay = 86400
+# Dead letter queue threshold in days
+dead_letter_threshold_days = 7
