feat: Add TruffleHog OSS secret scanning to workflow
Add TruffleHog OSS GitHub Action to scan for leaked credentials in the repository. Configured to report only verified active secrets to reduce noise.

--- a/.github/workflows/reddit_scraper.yml
+++ b/.github/workflows/reddit_scraper.yml
@@ -36,6 +36,11 @@ jobs:
       uses: actions/checkout@v4
       timeout-minutes: 1
 
+    - name: TruffleHog OSS
+      uses: trufflesecurity/trufflehog@v3.90.8
+      with:
+        extra_args: --only-verified
+
     # Create 6-month refresh key for dependency cache invalidation
     - name: Create semi-annual cache key
       id: cache-key
