chore: Update TruffleHog to use latest version via @main

--- a/.github/workflows/reddit_scraper.yml
+++ b/.github/workflows/reddit_scraper.yml
@@ -37,7 +37,7 @@ jobs:
       timeout-minutes: 1
 
     - name: TruffleHog OSS
-      uses: trufflesecurity/trufflehog@v3.90.8
+      uses: trufflesecurity/trufflehog@main
       with:
         extra_args: --only-verified
 
