--- a/settings.ini
+++ b/settings.ini
@@ -79,3 +79,15 @@ exponential_base_delay = 60
 max_retry_delay = 86400
 # Dead letter queue threshold in days
 dead_letter_threshold_days = 7
+
+# Cloud Storage Backend
+[Storage]
+# Provider: none, dropbox, s3
+provider = none
+# S3 settings (ignored when provider != s3)
+s3_bucket = None
+s3_region = None
+# Storage class: STANDARD, STANDARD_IA, ONEZONE_IA, INTELLIGENT_TIERING, GLACIER_IR, GLACIER, DEEP_ARCHIVE
+s3_storage_class = STANDARD_IA
+# Custom S3 endpoint (for MinIO, LocalStack, etc.)
+s3_endpoint_url = None
